--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -79,6 +79,12 @@ mathjax: true
 
   是阶乘在实数域上的推广，若 $$n$$ 是整数，则 $$\Gamma(n)=(n-1)!$$。
 
+### 变分法初步
+
+一般地说，一个变量 $$J$$，如果其取值取决于函数关系 $$y=y(x)$$，就叫做函数 $$y(x)$$ 的**泛函**，记作 $$J[y(x)]$$。求泛函的极值问题就叫做**变分**问题。把变分问题转化为求解微分方程——**欧拉方程**。欧拉方程是变分问题所必须满足的**必要条件**。需要满足约束条件时，用拉格朗日乘子法（见下文）处理欧拉方程。
+
+一个简单的例子：$$J[y(x)]=\displaystyle\int_a^bF(x,y,y^\prime)dx$$，假设边界不变 $$\delta y\vert_a^b=0$$，则 $$J[y(x)]$$ 取极值（$$\delta J[y]=\displaystyle\int_a^b[\frac{\partial F}{\partial y}-\frac{d}{dx}(\frac{\partial F}{\partial y^\prime})]\delta ydx=0$$）的必要条件是 $$\displaystyle\frac{\partial F}{\partial y}-\frac{d}{dx}(\frac{\partial F}{\partial y^\prime})=0$$，或 $$\displaystyle\frac{\partial F}{dx}+\frac{d}{dx}(y^\prime\frac{\partial F}{\partial y^\prime}-F)=0$$。详见[力学变分原理](https://shi200005.github.io/download_file/ACM_Functional.pdf)。多变量推广、高阶导推广、有约束推广......
+
 ## 数项级数
 
 正项级数：比较法之极限形式、根式法、比值法、 Cauchy-Hadamard 公式 -> 收敛域。
@@ -180,6 +186,8 @@ reference:
 
 补充：拉普拉斯算子也可以对矢量场作用，例如在笛卡尔坐标系，$$\nabla^2\vec v=(\nabla^2 v_x)\vec e_x+(\nabla^2 v_y)\vec e_y+(\nabla^2 v_z)\vec e_z$$。在[电动力学 - 电磁波的传播](https://shi200005.github.io/2022/04/10/Electrodynamics/)中使用。
 
+在场论中，常常需要区分**场点** $$\vec x$$ 和**源点** $$\vec x'$$ 。定义算符对场点微分 $$\nabla=\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$，对源点微分 $$\nabla'=\vec e_i\displaystyle\frac{\partial}{\partial x_i'}$$，具体关于**相对位矢** $$\vec r=\vec x-\vec x'$$ 的运算律见电动力学课件。  
+
 #### 高斯公式、格林公式、斯托克斯公式
 
 由于我们要用积分和微分联系几何对象**边界**和**内部**，此处研究**可定向**的曲线和曲面。第二类曲线/曲面积分可以转化为第一类曲线/曲面积分，反之则不一定。事实上，第一类曲线/曲面积分学过之后就没用过，故不必放在心上。**第二类曲线/曲面积分**好在哪里呢？我们可以使用**高斯公式、格林公式和斯托克斯公式**对我们研究的量进行转换。
@@ -226,3 +234,25 @@ $$\displaystyle\int_Md\omega=\int_{\partial M}\omega$$​.  参见 All 6.7.
 ### 广义 Leibniz 积分律
 
 一元函数中我们讨论了变限积分求导公式，推广到高维，知乎专栏“[如何对积分求导——夏草的璇涡冰激凌](https://zhuanlan.zhihu.com/p/547766124)”已经写得很详细了。用到的行列式微分引理详见[线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E7%9F%A9%E9%98%B5%E6%B1%82%E5%AF%BC)。
+
+## 矢量与张量运算
+
+矢量的标积（做功）、矢积（平行四边形有向面积）、混合积（平行六面体体积）。
+
+轴矢量与极矢量
+
+ - 极矢量：镜面垂直量反向  e.g., 空间位矢、电场、电偶极矩等。
+ - 轴矢量：镜面平行量反向  e.g., 磁矩、磁感应强度等。
+ - 极矢量 $$\times$$ 极矢量 $$=$$ 轴矢量。
+
+### 并矢与张量
+
+**三维欧氏空间**中，零阶张量——标量，一阶张量——三维矢量，二阶张量——张量 $$\overleftrightarrow T$$ 3 阶矩阵。
+
+并矢：把两个矢量两两配对相乘列成矩阵，并不做什么。并矢与矢量的点乘、叉乘。张量与矢量的点乘 -> 并矢与矢量的点乘。并矢与并矢点乘、双点积、叉乘。
+
+矢量空间中的泰勒展开：$$f(\vec x+\vec\delta)=f(\vec x)+\delta_i\displaystyle\frac{\partial}{\partial x_i}f(\vec x)+\displaystyle\frac{1}{2}\delta_i\delta_j\displaystyle\frac{\partial}{\partial x_i}\displaystyle\frac{\partial}{\partial x_j}f(\vec x)+...$$
+
+$$=f(\vec x)+\vec\delta\cdot\nabla f(\vec x)+\displaystyle\frac{1}{2}(\vec\delta\cdot\nabla)(\vec\delta\cdot\nabla)f(\vec x)+...$$
+
+$$=f(\vec x)+\vec\delta\cdot\nabla f(\vec x)+\displaystyle\frac{1}{2}\vec\delta\vec\delta:\nabla\nabla f(\vec x)+...$$
