--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -147,7 +147,7 @@ mathjax: true
 
 #### 积分换元 - 雅可比矩阵
 
-[微积分-雅可比矩阵及其几何意义](https://shi200005.github.io/download_file/Calculus_Jacobian.pdf)：一元函数积分换元时，有一个“系数”（$$\displaystyle \int_a^be^{-2y}dy$$→$$\displaystyle \int_{\frac{a}{2}}^{\frac{b}{2}}e^{-x}\frac{1}{2}dx$$）。到了多元函数积分学，这个系数就是[**雅可比矩阵**的**行列式**](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)。Intuition: 前面已经给出了雅可比矩阵的意义：描述多元函数微分性质。那么对于 n 重积分换元，相当于有一个 $$\vec f:\R^n\to\R^n$$​，从旧坐标映射到新坐标。结合[行列式的意义](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)，作为“系数”的雅可比行列式就是新旧坐标体积变化倍数。
+[微积分-雅可比矩阵及其几何意义](https://shi200005.github.io/download_file/Calculus_Jacobian.pdf)：一元函数积分换元时，有一个“系数”（$$\displaystyle \int_a^be^{-2y}dy$$→$$\displaystyle \int_{\frac{a}{2}}^{\frac{b}{2}}e^{-x}\frac{1}{2}dx$$）。到了多元函数积分学，这个系数就是[**雅可比矩阵**的**行列式**](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)。Intuition: 前面已经给出了雅可比矩阵的意义：描述多元函数微分性质。那么对于 n 重积分换元，相当于有一个 $$\vec f:\mathbb R^n\to\mathbb R^n$$，从旧坐标映射到新坐标。结合[行列式的意义](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)，作为“系数”的雅可比行列式就是新旧坐标体积变化倍数。
 
 试想我想用积分算算我奇形怪状的大庄园面积有几亩，建立一亩为单位长度的平面直角坐标系，积分计算面积就是把函数 $$f(x,y)=1$$ 在庄园范围做个二重积分。不管我把坐标系单位长度换成米还是英寸，我希望函数 $$f$$ 积分告诉我庄园有几亩，不以我变换的坐标系为转移，于是，我需要雅可比行列式。
 
@@ -170,7 +170,7 @@ reference:
 
 #### 曲线、曲面积分
 
-曲线积分：在一元函数中，我们只是对 $$f(x)$$ 在 $$x$$ 的某取值范围内积分。现在我们对 $$f(x_1,...,x_n)$$ 可以在 $$\R^n$$ 内一条曲线 $$s$$ 积分，为 $$\displaystyle\int_C fds$$，计算方法是找到*一个*参数把 $$s$$ 参数化，然后就变成了一元积分。
+曲线积分：在一元函数中，我们只是对 $$f(x)$$ 在 $$x$$ 的某取值范围内积分。现在我们对 $$f(x_1,...,x_n)$$ 可以在 $$\mathbb R^n$$ 内一条曲线 $$s$$ 积分，为 $$\displaystyle\int_C fds$$，计算方法是找到*一个*参数把 $$s$$ 参数化，然后就变成了一元积分。
 
 曲面积分：在二重积分里面我们对二维空间的一个区域积分，现在可以在*三维*空间里定义一个二维曲面 $$S$$ 上对某函数积分，为 $$\displaystyle\int_S fdS$$，方法是积分换元成两个参数，然后就变成了二重积分，勿忘雅可比。更多 intuition 见 All 5.1.4节。
 
