--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -47,7 +47,7 @@ mathjax: true
 
 ## 一元函数
 
-一元函数知识点的简单例子：[微积分-一元函数](https://shi200005.github.io/download_file/Calculus_Mono.pdf)。
+一元函数知识点的简单例子：[微积分 - 一元函数](https://shi200005.github.io/download_file/Calculus_Mono.pdf)。
 
 ### 微分学
 
@@ -65,11 +65,11 @@ mathjax: true
 
 导数、导函数、反函数的导函数、隐函数的导函数。
 
-[微积分-自然对数e](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf) **pending：证明超越数。**逼近 $$e$$ 的值：使用 $$\displaystyle e=\frac{1}{1!}+\frac{1}{2!}+\frac{1}{3!}+\frac{1}{4!}+\frac{1}{5!}+...$$
+[微积分 - 自然对数e](https://shi200005.github.io/download_file/Calculus_Natural_Logarithm.pdf)。**pending：证明超越数。**逼近 $$e$$ 的值：使用 $$\displaystyle e=\frac{1}{1!}+\frac{1}{2!}+\frac{1}{3!}+\frac{1}{4!}+\frac{1}{5!}+...$$
 
 ### 积分学
 
-牛顿-莱布尼兹公式：$$\displaystyle F(x)=\int_a^xf(t)dt$$, $$\displaystyle f(x)=\frac{d}{dx}\int_a^xf(t)dt$$, $$\displaystyle \int_a^b f(t)dt=F(b)-F(a)$$.  若积分上下限都是随 $$x$$ 变化的函数，变限积分求导公式 $$\displaystyle\frac{d}{dt}\int_{\alpha(t)}^{\beta(t)}g(t;\tau)d\tau=\int_{\alpha(t)}^{\beta(t)}\frac{\partial g(t;\tau)}{\partial t}d\tau + g[t;\beta(t)]\frac{d\beta(t)}{dt} - g[t;\alpha(t)]\frac{d\alpha(t)}{dt}$$. 可以用链式法则得到，可见积分变化率总能分为被积函数的影响+积分区域的影响两部分，将在[冲量定理法](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/#%E5%86%B2%E9%87%8F%E5%AE%9A%E7%90%86%E6%B3%95)的数学验证中用到。
+牛顿-莱布尼兹公式：$$\displaystyle F(x)=\int_a^xf(t)dt$$, $$\displaystyle f(x)=\frac{d}{dx}\int_a^xf(t)dt$$, $$\displaystyle \int_a^b f(t)dt=F(b)-F(a)$$.  若积分上下限都是随 $$x$$ 变化的函数，变限积分求导公式 $$\displaystyle\frac{d}{dt}\int_{\alpha(t)}^{\beta(t)}g(t;\tau)d\tau=\int_{\alpha(t)}^{\beta(t)}\frac{\partial g(t;\tau)}{\partial t}d\tau + g[t;\beta(t)]\frac{d\beta(t)}{dt} - g[t;\alpha(t)]\frac{d\alpha(t)}{dt}$$. 可以用链式法则得到，可见积分变化率总能分为被积函数的影响 + 积分区域的影响两部分，将在[线性响应](https://shi200005.github.io/2024/11/28/Linear-Response/#linear-response)的数学验证中用到（见此节 Cross check 部分）。
 
 熟练掌握简单换元 & 分部积分 $$\displaystyle\int udv=uv-\int vdu$$.
 
@@ -91,7 +91,7 @@ mathjax: true
 
 收敛域内逐项积分、逐项求导。
 
-对于以上数项级数知识点的简单例子：[微积分-数项级数](https://shi200005.github.io/download_file/Calculus_Series.pdf)、[斐波那契数列与黄金分割比](https://shi200005.github.io/download_file/Calculus_Fibonacci.pdf)。
+对于以上数项级数知识点的简单例子：[微积分 - 数项级数](https://shi200005.github.io/download_file/Calculus_Series.pdf)、[斐波那契数列与黄金分割比](https://shi200005.github.io/download_file/Calculus_Fibonacci.pdf)。
 
 重要结论示例
 
@@ -111,7 +111,7 @@ mathjax: true
 
 ## 常微分方程
 
-基本技能点：[微积分-几种常见形式ODE的求解套路](https://shi200005.github.io/download_file/Calculus_ODE.pdf)。其中第4个例子在 [(En) Stochastic Processes](https://shi200005.github.io/2022/10/28/Stochastic-Processes/) 中朗之万方程求解中格外重要。
+基本技能点：[微积分 - 几种常见形式ODE的求解套路](https://shi200005.github.io/download_file/Calculus_ODE.pdf)。其中第4个例子在 [(En) Stochastic Processes](https://shi200005.github.io/2022/10/28/Stochastic-Processes/) 中朗之万方程求解中格外重要。
 
 ### 欧拉型常微分方程
 
@@ -125,11 +125,11 @@ mathjax: true
 
 判断多元函数是否有极限。连续可微、可微、连续、偏导存在的关系。$$\displaystyle df(x,y)=\frac{\partial f}{\partial x}dx + \frac{\partial f}{\partial y}dy$$。[如何理解偏微分和全微分？ - Chinese Cabbage的回答 - 知乎](https://www.zhihu.com/question/272499712/answer/441638297)。
 
-驻点（saddle point，在[统计物理](https://shi200005.github.io/2022/09/10/Statistical-Mechanics/#rules-for-large-numbers)中 saddle point approximation 很重要） -> 极值点 -> Hessian Matrix 的正定/负定/...性质 -> [线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E7%89%B9%E5%BE%81%E5%80%BC%E5%92%8C%E7%89%B9%E5%BE%81%E5%90%91%E9%87%8F)
+驻点 -> 极值点 -> Hessian Matrix 的正定/负定/...性质 -> [线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E4%BA%8C%E6%AC%A1%E5%9E%8B)
 
 - **齐次函数的欧拉定理**
 
-  若函数 $$f(x_1,x_2,...,x_n)$$ 是变量 $$x_1,x_2,...,x_n$$ 的 $$m$$ 次齐次多项式 -> $$f(\lambda x_1,\lambda x_2,...,\lambda x_n)=\lambda^mf(x_1,x_2,...,x_n)$$ -> $$\displaystyle\sum_{i=1}^n\frac{\partial f}{\partial x_i}x_i=mf$$.  应用：广义能量-[理论力学](https://shi200005.github.io/2022/04/30/Advanced-Classical-Mechanics/#%E6%8B%89%E6%A0%BC%E6%9C%97%E6%97%A5%E5%8A%9B%E5%AD%A6)。
+  若函数 $$f(x_1,x_2,...,x_n)$$ 是变量 $$x_1,x_2,...,x_n$$ 的 $$m$$ 次齐次多项式 -> $$f(\lambda x_1,\lambda x_2,...,\lambda x_n)=\lambda^mf(x_1,x_2,...,x_n)$$ -> $$\displaystyle\sum_{i=1}^n\frac{\partial f}{\partial x_i}x_i=mf$$.  应用：广义能量 - [理论力学](https://shi200005.github.io/2022/04/30/Advanced-Classical-Mechanics/#%E8%AF%BA%E7%89%B9%E5%AE%9A%E7%90%86)。
 
 - **勒让德变换**
 
@@ -139,7 +139,7 @@ mathjax: true
 
   将一个有 $$n$$ 个变量与 $$k$$ 个约束条件的最优化问题转换为一个解有 $$n+k$$ 个变量的方程组的解的问题。任务：求 $$f(\boldsymbol{x})$$ 的极值，约束条件为 $$g_1(\boldsymbol{x})=...=g_M(\boldsymbol{x})=0$$。数学等价：$$\nabla_{x_1,...,x_n,\lambda_1,...,\lambda_M}\mathscr{L}(x_1,...,x_n,...\lambda_1,...,\lambda_M)=0$$$$\Leftrightarrow$$$$\begin{cases} \nabla f(\boldsymbol{x})-\displaystyle\sum_{k=1}^M\lambda_k\nabla g_k(\boldsymbol x)=0 \\ g_1(\boldsymbol x)=...=g_M(\boldsymbol x)=0\end{cases}$$.
 
-**Vector-Valued**: $$\vec f(x_1,...,x_n)=\begin{pmatrix}\vec f_1(x_1,...,x_n) \\.\\.\\.\\ \vec f_m(x_1,...,x_n)\end{pmatrix}$$记为 $$\vec f(\vec x)$$，$$\vec f:\mathbb R^n\to\mathbb R^m$$，物理中称为**矢量场**。
+**Vector-Valued**: $$\vec f(x_1,...,x_n)=\begin{pmatrix}\vec f_1(x_1,...,x_n) \\ \vdots\\ \vec f_m(x_1,...,x_n)\end{pmatrix}$$记为 $$\vec f(\vec x)$$，$$\vec f:\mathbb R^n\to\mathbb R^m$$，物理中称为**矢量场**。
 
 一元函数可微 - 线性增长率 - 切线斜率。多元 VVF 推广 - **雅可比矩阵**，见 All 3.3，$$\vec y\approx\vec f(\vec a)+\hat D\vec f(\vec a)\cdot(\vec x-\vec a)$$。引理：vector-valued functions 求导链式法则，见 All Theorem 3.3.3。引理给出推论：反函数的雅可比。再推论：隐函数定理（这个目前没遇到过）。
 
@@ -147,7 +147,7 @@ mathjax: true
 
 #### 积分换元 - 雅可比矩阵
 
-[微积分-雅可比矩阵及其几何意义](https://shi200005.github.io/download_file/Calculus_Jacobian.pdf)：一元函数积分换元时，有一个“系数”（$$\displaystyle \int_a^be^{-2y}dy$$→$$\displaystyle \int_{\frac{a}{2}}^{\frac{b}{2}}e^{-x}\frac{1}{2}dx$$）。到了多元函数积分学，这个系数就是[**雅可比矩阵**的**行列式**](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)。Intuition: 前面已经给出了雅可比矩阵的意义：描述多元函数微分性质。那么对于 n 重积分换元，相当于有一个 $$\vec f:\mathbb R^n\to\mathbb R^n$$，从旧坐标映射到新坐标。结合[行列式的意义](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)，作为“系数”的雅可比行列式就是新旧坐标体积变化倍数。
+[微积分 - 雅可比矩阵及其几何意义](https://shi200005.github.io/download_file/Calculus_Jacobian.pdf)：一元函数积分换元时，有一个“系数”（$$\displaystyle \int_a^be^{-2y}dy$$→$$\displaystyle \int_{\frac{a}{2}}^{\frac{b}{2}}e^{-x}\frac{1}{2}dx$$）。到了多元函数积分学，这个系数就是[**雅可比矩阵**的**行列式**](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)。Intuition: 前面已经给出了雅可比矩阵的意义：描述多元函数微分性质。那么对于 n 重积分换元，相当于有一个 $$\vec f:\mathbb R^n\to\mathbb R^n$$，从旧坐标映射到新坐标。结合[行列式的意义](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)，作为“系数”的雅可比行列式就是新旧坐标体积变化倍数。
 
 试想我想用积分算算我奇形怪状的大庄园面积有几亩，建立一亩为单位长度的平面直角坐标系，积分计算面积就是把函数 $$f(x,y)=1$$ 在庄园范围做个二重积分。不管我把坐标系单位长度换成米还是英寸，我希望函数 $$f$$ 积分告诉我庄园有几亩，不以我变换的坐标系为转移，于是，我需要雅可比行列式。
 
@@ -166,7 +166,7 @@ reference:
 
 后续课程中，绝大部分情况下我们求解的问题都是高度对称的，尤其是柱坐标、球坐标问题，绝大部分可以将积分变量分离开积分再相乘。
 
-对于以上多元函数知识点的简单例子：[微积分-多元函数](https://shi200005.github.io/download_file/Calculus_Multi.pdf)。
+对于以上多元函数知识点的简单例子：[微积分 - 多元函数](https://shi200005.github.io/download_file/Calculus_Multi.pdf)。
 
 #### 曲线、曲面积分
 
@@ -176,15 +176,15 @@ reference:
 
 ### 梯度、散度、旋度
 
-标量场的梯度 [Gradient-Wiki](https://en.wikipedia.org/wiki/Gradient)、矢量场的散度 [Divergence-Wiki](https://en.wikipedia.org/wiki/Divergence)（高斯定理）、矢量场的旋度 [Curl-Wiki](https://en.wikipedia.org/wiki/Curl_(mathematics))（斯托克斯定理）
+标量场的梯度 [Gradient - Wiki](https://en.wikipedia.org/wiki/Gradient)、矢量场的散度 [Divergence - Wiki](https://en.wikipedia.org/wiki/Divergence)（高斯定理）、矢量场的旋度 [Curl - Wiki](https://en.wikipedia.org/wiki/Curl_(mathematics))（斯托克斯定理）
 
 **矢量微分算符**
 
 在直角坐标系下 $$\nabla=\displaystyle\sum_i\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$。在右手广义坐标系下怎么写？这取决于我们希望场论中的梯度、散度、旋度不随坐标系的变换而改变数值。参见下文多元函数积分引用的[高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0)  。
 
-[Nabla 算符 ∇ 的运算律以及常用公式 - 東雲正樹的文章 - 知乎](https://zhuanlan.zhihu.com/p/52834609)。**拉普拉斯算子** $$\nabla\cdot(\nabla\varphi)=(\nabla\cdot\nabla)\varphi=\nabla^2\varphi$$，在调和函数（如电势场）中常用。 这个链接的封面图就是高斯定理微分形式有关的一个很常用的数学公式 $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$，这是数学的关系，见下面高斯定理，但是可以结合[电磁学 - 库仑定律](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E5%BA%93%E4%BB%91%E5%AE%9A%E5%BE%8B)记忆——空间原点孤立点电荷形成的电势场。
+[Nabla 算符 ∇ 的运算律以及常用公式 - 東雲正樹的文章 - 知乎](https://zhuanlan.zhihu.com/p/52834609)。**拉普拉斯算子** $$\nabla\cdot(\nabla\varphi)=(\nabla\cdot\nabla)\varphi=\nabla^2\varphi$$，在调和函数（如电势场）中常用。 这个链接的封面图就是高斯定理微分形式有关的一个很常用的数学公式 $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$，这是数学的关系，见下面高斯定理，但是可以结合[电磁学 - 库仑定律](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E5%9B%BA%E5%AE%9A%E7%82%B9%E7%94%B5%E8%8D%B7%E5%BA%93%E4%BB%91%E5%AE%9A%E5%BE%8B)记忆——空间原点孤立点电荷形成的电势场。
 
-补充：拉普拉斯算子也可以对矢量场作用，例如在笛卡尔坐标系，$$\nabla^2\vec v=(\nabla^2 v_x)\vec e_x+(\nabla^2 v_y)\vec e_y+(\nabla^2 v_z)\vec e_z$$。在[电动力学 - 电磁波的传播](https://shi200005.github.io/2022/04/10/Electrodynamics/)中使用。
+补充：拉普拉斯算子也可以对矢量场作用，例如在笛卡尔坐标系，$$\nabla^2\vec v=(\nabla^2 v_x)\vec e_x+(\nabla^2 v_y)\vec e_y+(\nabla^2 v_z)\vec e_z$$。在[电动力学 - 电磁波的传播](https://shi200005.github.io/2022/04/10/Electrodynamics/#%E7%94%B5%E7%A3%81%E6%B3%A2%E7%9A%84%E4%BC%A0%E6%92%AD)中使用。
 
 在场论中，常常需要区分**场点** $$\vec x$$ 和**源点** $$\vec x'$$ 。定义算符对场点微分 $$\nabla=\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$，对源点微分 $$\nabla'=\vec e_i\displaystyle\frac{\partial}{\partial x_i'}$$，具体关于**相对位矢** $$\vec r=\vec x-\vec x'$$ 的运算律见电动力学课件。  
 
@@ -211,14 +211,14 @@ reference:
     应用：椭圆面积公式。
 
 
-对于以上多元函数知识点的简单例子：[微积分-多元函数2](https://shi200005.github.io/download_file/Calculus_Multi_2.pdf)。
+对于以上多元函数知识点的简单例子：[微积分 - 多元函数2](https://shi200005.github.io/download_file/Calculus_Multi_2.pdf)。
 
 如何在一个变换了的广义右手坐标下表示？
 
- - [高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0) reference: 《数学分析新讲III》张筑生 第十七章 附录 正交曲线坐标系中的场论计算
- - [电磁学](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E7%9F%A2%E9%87%8F%E8%BF%90%E7%AE%97%E9%A2%84%E5%A4%87%E7%9F%A5%E8%AF%86)课件里没加解释的拉梅系数 $$h_\alpha$$，其实相当于把直角坐标系里的三个基向量，转化成任意微元相互右手垂直的广义坐标 $$q_\alpha$$​ 对应基矢量长度，与原来各向同性基矢量单位长度对应的比较系数。在有关面积和体积的度量上，也要转化回各向同性直角坐标系作为标准。
+ - [高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0)。reference: 《数学分析新讲III》张筑生 第十七章 附录 正交曲线坐标系中的场论计算。
+ - 电磁学课件里没加解释的拉梅系数 $$h_\alpha$$，其实相当于把直角坐标系里的三个基向量，转化成任意微元相互右手垂直的广义坐标 $$q_\alpha$$​ 对应基矢量长度，与原来各向同性基矢量单位长度对应的比较系数。在有关面积和体积的度量上，也要转化回各向同性直角坐标系作为标准。
 
-电磁学中常用结论
+[电磁学](https://shi200005.github.io/2022/03/29/Electromagnetism/)中常用结论
 
 - $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$.
 
@@ -241,8 +241,8 @@ $$\displaystyle\int_Md\omega=\int_{\partial M}\omega$$​.  参见 All 6.7.
 
 轴矢量与极矢量
 
- - 极矢量：镜面垂直量反向  e.g., 空间位矢、电场、电偶极矩等。
- - 轴矢量：镜面平行量反向  e.g., 磁矩、磁感应强度等。
+ - 极矢量：镜面垂直量反向。e.g., 空间位矢、电场、电偶极矩等。
+ - 轴矢量：镜面平行量反向。e.g., 磁矩、磁感应强度等。
  - 极矢量 $$\times$$ 极矢量 $$=$$ 轴矢量。
 
 ### 并矢与张量
