--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -137,11 +137,11 @@ mathjax: true
 
 - **拉格朗日乘子法**
 
-  将一个有 $$n$$ 个变量与 $$k$$ 个约束条件的最优化问题转换为一个解有 $$n+k$$ 个变量的方程组的解的问题。任务：求 $$f(\boldsymbol{x})$$ 的极值，约束条件为 $$g_1(\boldsymbol{x})=...=g_M(\boldsymbol{x})=0$$。数学等价：$$\nabla_{x_1,...,x_n,\lambda_1,...,\lambda_M}\mathscr{L}(x_1,...,x_n,...\lambda_1,...,\lambda_M)=0$$$$\Leftrightarrow$$$$\begin{cases} \nabla f(\boldsymbol{x})-\displaystyle\sum_{k=1}^M\lambda_k\nabla g_k(\boldsymbol x)=0 \\ g_1(\boldsymbol x)=...=g_M(\boldsymbol x)=0\end{cases}$$.
+  将一个有 $$n$$ 个变量与 $$k$$ 个约束条件的最优化问题转换为一个解有 $$n+k$$ 个变量的方程组的解的问题。任务：求 $$f(\vec{x})$$ 的极值，约束条件为 $$g_1(\vec{x})=...=g_M(\vec{x})=0$$。数学等价：$$\nabla_{x_1,...,x_n,\lambda_1,...,\lambda_M}\mathscr{L}(x_1,...,x_n,...\lambda_1,...,\lambda_M)=0$$$$\Leftrightarrow$$$$\begin{cases} \nabla f(\vec{x})-\displaystyle\sum_{k=1}^M\lambda_k\nabla g_k(\vec x)=0 \\ g_1(\vec x)=...=g_M(\vec x)=0\end{cases}$$.
 
 **Vector-Valued**: $$\vec f(x_1,...,x_n)=\begin{pmatrix}\vec f_1(x_1,...,x_n) \\ \vdots\\ \vec f_m(x_1,...,x_n)\end{pmatrix}$$记为 $$\vec f(\vec x)$$，$$\vec f:\mathbb R^n\to\mathbb R^m$$，物理中称为**矢量场**。
 
-一元函数可微 - 线性增长率 - 切线斜率。多元 VVF 推广 - **雅可比矩阵**，见 All 3.3，$$\vec y\approx\vec f(\vec a)+\hat D\vec f(\vec a)\cdot(\vec x-\vec a)$$。引理：vector-valued functions 求导链式法则，见 All Theorem 3.3.3。引理给出推论：反函数的雅可比。再推论：隐函数定理（这个目前没遇到过）。
+一元函数可微 - 线性增长率 - 切线斜率。多元 VVF 推广 - **雅可比矩阵**，见 All 3.3，$$\vec y\approx\vec f(\vec a)+\mathbf D\vec f(\vec a)\cdot(\vec x-\vec a)$$。引理：vector-valued functions 求导链式法则，见 All Theorem 3.3.3。引理给出推论：反函数的雅可比。再推论：隐函数定理（这个目前没遇到过）。
 
 ### 多重积分
 
