sisi and schubert

--- a/_posts/2023-08-30-Wien.md
+++ b/_posts/2023-08-30-Wien.md
@@ -6,13 +6,13 @@ description:
 keywords: 
 ---
 
-Um zwei berühmte Persönlichkeiten zu ehren, die einst in Wien lebten—Ludwig Boltzmann und Ludwig van Beethoven—enthält dieser Artikel zwei Paragraphen aus ihren Schriften.
+Um vier berühmte Persönlichkeiten zu ehren, die einst in Wien lebten—Ludwig Boltzmann, Ludwig van Beethoven, Elisabeth Amalie Eugenie, und Franz Schubert—enthält dieser Artikel vier Paragraphen aus ihren Schriften.
 
 **Ludwig Boltzmann**, Österreichischer Physiker
 
 > *Ultima se tangunt.* Und wie ausdrucksfähig, wie fein charakterisirend ist dabei die Mathematik. Wie der Musiker bei den ersten Tacten *Mozart, Beethoven, Schubert* erkennt, so würde der Mathematiker nach wenigen Seiten, seinen *Cauchy, Gauss, Jacobi, Helmholtz* unterscheiden. 
 >
-> --[Gründungstages der Karl-Franzens-Universität zu Graz / gehalten am 15. November 1887 von Dr. Ludwig Boltzmann, z. Z. Rektor.](http://histmath-heidelberg.de/boltzmann-schoenheit.htm)
+> -- [Gründungstages der Karl-Franzens-Universität zu Graz / gehalten am 15. November 1887 von Dr. Ludwig Boltzmann, z. Z. Rektor.](http://histmath-heidelberg.de/boltzmann-schoenheit.htm)
 
 ![20230822_Boltzmann](\images\blog\20230822_Boltzmann.JPG)
 
@@ -22,8 +22,28 @@ Foto aufgenommen von L Shi am 22.08.2023 um 10:11 Uhr auf dem Wiener Zentralfrie
 
 > …solche Ereignisse brachten mich nahe an Verzweiflung, es fehlte wenig,  und ich endigte selbst mein Leben – nur sie die Kunst, sie hielt mich  zurück, ach es dünkte mir unmöglich, die Welt eher zu verlassen, bis ich das alles hervorgebracht, wozu ich mich aufgelegt fühlte, und so  fristete ich dieses elende Leben…
 >
-> --[Ludwig van Beethoven, Heiligenstädter Testament](https://de.wikisource.org/wiki/Heiligenst%C3%A4dter_Testament)
+> -- [Ludwig van Beethoven, Heiligenstädter Testament](https://de.wikisource.org/wiki/Heiligenst%C3%A4dter_Testament)
 
 ![20230825_Beethoven](\images\blog\20230825_Beethoven.JPG)
 
 Foto aufgenommen von L Shi am 25.08.2023 um 12:02 Uhr in Wien Heiligenstadt.
+
+**Elisabeth Amalie Eugenie**, Kaiserin von Österreich
+
+>Die Reiseziele sind deswegen begehrenswert, weil die Reise dazwischen liegt. Wenn ich irgendwo angekommen wäre und wüßte, daß ich nie mehr mich entfernen könnte, würde mir der Aufenthalt selbst im Paradies zur Hölle werden.
+>
+>-- [Sie sagt zu ihrem Griechisch-Lehrer...](https://www.nachrichten.at/kultur/Alle-lieben-Sisi;art16,970736)
+
+![20230822_Schoenbrunn](/images/blog/20230822_Schoenbrunn.jpg)
+
+Foto aufgenommen von L Shi am 22.08.2023 um 15:02 Uhr in Wien Schloss Schönbrunn.
+
+**Franz Schubert**, Österreicher Komponist
+
+> Keiner, der den Schmerz des Andern, und Keiner, der die Freude des Andern [versteht](https://de.wikiquote.org/wiki/Verständnis). Man glaubt immer zu einander zu gehen und man geht nur neben einander. O Qual für den, der dieß erkennt!
+>
+> -- [Tagebucheintrag, 27 März 1824](https://de.wikiquote.org/wiki/Franz_Schubert)
+
+![20230822_Schubert](/images/blog/20230822_Schubert.jpg)
+
+Foto aufgenommen von L Shi am 22.08.2023 um 10:02 Uhr auf dem Wiener Zentralfriedhof.
