--- a/_posts/2022-04-20-Optics.md
+++ b/_posts/2022-04-20-Optics.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 光学
+title: 光学 1.0
 categories: BS-NJU-Course-Review-Physics
 description: 
 keywords: optics
@@ -19,7 +19,7 @@ mathjax: true
 | 学习时间                | 大二上                             |
 | 周课时                    | 3                                      |
 | 本人成绩                | 90                                    |
-| 课程教材                | 忘了，反正应该绝版了  |
+| 课程教材                | 高文绮 但绝版了            |
 | 个人建议参考教材 | Optics by E. Hecht        |
 | 先修课程                | 微积分 电磁学 数学物理方法 电动力学    |
 
@@ -31,7 +31,7 @@ mathjax: true
 
 光在介质中的速度 $$v=\sqrt{\epsilon_0\mu_0\epsilon_r\mu_r}$$，光在介质中的折射率 $$\displaystyle n=\frac{c}{v}=\sqrt{\epsilon_r\mu_r}$$。光学材料通常是非铁磁质，在光频段 $$\mu_r=1$$。光进入不同介质，波长改变，频率不变，联想力学里的[受迫振动](https://shi200005.github.io/2024/11/28/Linear-Response/#the-damped-harmonic-oscillator)。
 
-参见[绝缘介质中时谐平面波能流密度](https://shi200005.github.io/2022/04/10/Electrodynamics/#时谐平面波-1)，光强 $$\displaystyle I=\langle\vec S\rangle=\frac{1}{2}c\epsilon_0nE_0^2\propto nE_0^2$$。近似平面波（激光束、透镜或反射镜...）和球面波远场区域满足电场和磁场垂直；考虑时谐波。理想的单色光源：[激光](https://shi200005.github.io/2022/08/25/Modern-Physics/#原子与电磁波相互作用)、同步辐射。电磁场有动量，对应微观上光子也有动量，量子化后为 $$p=h/\lambda$$，应用：**光镊**。
+光波是矢量横波。**偏振**：横波的振动矢量在垂直于波传播方向的平面内呈现不对称性取向的状态和现象。
 
 ## 波动方程
 
@@ -43,6 +43,8 @@ mathjax: true
 
 我们可以用简谐振动激发这种波，得到**简谐**平面波，[三维空间描述](https://shi200005.github.io/2022/02/23/Classical-Mechanics/#简谐波单色波的复数表示)：$$\psi(p,t)=A\cos(\vec k\cdot\vec r-\omega t+\varphi_0)$$，因为懒，省去时间因子 $$-i\omega t$$，复振幅描述为 $$\tilde\psi(p)=A\exp[i(\vec k\cdot\vec r+\varphi_0)]$$。矢量 $$\vec k$$ 满足 $$k=\displaystyle\frac{2\pi}{\lambda}$$，称作波矢量。homogeneous 的简谐平面波满足 $$A$$ 处处相等。波前的奔跑速度是相速度。
 
+光强 $$\displaystyle I=\langle\vec S\rangle=\frac{1}{2}c\epsilon_0nE_0^2\propto nE_0^2$$（[绝缘介质中时谐平面波能流密度](https://shi200005.github.io/2022/04/10/Electrodynamics/#时谐平面波-1)）。近似平面波（激光束、透镜或反射镜...）和球面波远场区域满足电场和磁场垂直；考虑时谐波。理想的单色光源：[激光](https://shi200005.github.io/2022/08/25/Modern-Physics/#原子与电磁波相互作用)、同步辐射。电磁场有动量，对应微观上光子也有动量，量子化后为 $$p=h/\lambda$$，应用：**光镊**。记 $$\tilde E(P)=E_0\exp[i(\vec k\cdot\vec r+\varphi_0)]$$，相对光强 $$I=\tilde E(P)\cdot\tilde E^*(P)$$。
+
 ### 球面波
 
 正如[数学物理方法](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/#施图姆-刘维尔本征值问题)中的球坐标下波动方程的解，其中球对称球面波满足 $$R_0(r)=D/r$$，$$\Theta(\theta)$$ 满足 0 阶勒让德函数  $$P_0(\cos\theta)=1$$，$$\Phi(\varphi)=1$$，于是球面波复振幅 $$\displaystyle\tilde\psi(p)=\frac{a}{r}\exp[\pm i(kr)]$$（其中设 $$\varphi_0=0$$，+ 为发散波，- 为会聚波），等相面与等幅面重合。
@@ -51,7 +53,11 @@ mathjax: true
 
 <p>from Hecht Figure 2.29</p>
 
-远场傍轴看，疑似平面波。考虑的范围在球面波传播轴附近（**傍轴**），条件： $$z^2\gg x^2+y^2$$。振幅  $$\displaystyle\frac{a}{r}\approx\frac{a}{z}$$，相位对 $$r$$ 展开 $$\displaystyle kr=k(z+\frac{x^2+y^2}{2z}-\frac{(x^2+y^2)^2}{8z^3}+\ldots)\approx k(z+\frac{x^2+y^2}{2z})$$，于是 $$\displaystyle\tilde\psi(x,y)=\frac{a}{z}\exp[\pm ik(z+\frac{x^2+y^2}{2z})]$$。场点离远点够远，以至于考虑范围内变一变位置，相位几乎没变。条件：$$\displaystyle k\frac{x^2+y^2}{2z}\ll\pi$$ 也就是 $$\displaystyle\frac{x^2+y^2}{\lambda}\ll z$$，于是 $$\displaystyle\tilde\psi(x,y)=\frac{a}{z}\exp[\pm ikz]$$，为平面波。
+远场傍轴看，疑似平面波。
+
+考虑的范围在球面波传播轴附近（**傍轴**），条件： $$z^2\gg x^2+y^2$$。振幅  $$\displaystyle\frac{a}{r}\approx\frac{a}{z}$$，相位对 $$r$$ 展开 $$\displaystyle kr=k(z+\frac{x^2+y^2}{2z}-\frac{(x^2+y^2)^2}{8z^3}+\ldots)\approx k(z+\frac{x^2+y^2}{2z})$$，于是 $$\displaystyle\tilde\psi(x,y)=\frac{a}{z}\exp[\pm ik(z+\frac{x^2+y^2}{2z})]$$。
+
+进一步，场点离远点够远，以至于考虑范围内变一变位置，相位几乎没变。条件：$$\displaystyle k\frac{x^2+y^2}{2z}\ll\pi$$ 也就是 $$\displaystyle\frac{x^2+y^2}{\lambda}\ll z$$，于是 $$\displaystyle\tilde\psi(x,y)=\frac{a}{z}\exp[\pm ikz]$$，为平面波。
 
 ## 几何光学
 
@@ -95,19 +101,194 @@ mathjax: true
 
 两个球面逐次成像，$$\displaystyle\frac{n'}{p'}-\frac{n}{p}=\frac{n_0-n}{r_1}+\frac{n'-n_0}{r_2}$$。光焦度 $$\displaystyle\Phi=\frac{n_0-n}{r_1}+\frac{n'-n_0}{r_2}=\Phi_1+\Phi_2$$。
 
-##### 近视眼镜
+近视眼镜是发散透镜，$$\Phi<0$$。
 
-是发散透镜，$$\Phi<0$$。
+- <img src="/images/blog/Optics_Eye_Exam.png" alt="Optics_Eye_Exam" style="zoom:60%;" />
 
-<img src="/images/blog/Optics_Eye_Exam.png" alt="Optics_Eye_Exam" style="zoom:50%;" />
+  <p>from 于老师 几何光学 107</p>
 
-<p>from 于老师 几何光学 107</p>
+## 光的偏振
+
+自然光：非偏振光，不同偏振方向相位无关，不能合成。
+
+椭圆偏振光：两个频率相同、振动方向互相垂直的简谐波的叠加。设沿 $$z$$ 轴传播，考虑在 $$z=0$$ 处的振动，
 
 
+$$
+\begin{cases}
+E_x=A_x\cos(\omega t+\varphi_x) \\
+E_y=A_y\cos(\omega t+\varphi_y)
+\end{cases}
+$$
 
 
+光矢量末端运动轨迹方程为 $$\displaystyle\frac{E_x^2}{A_x^2}+\frac{E_y^2}{A_y^2}-2\frac{E_xE_y}{A_xA_y}\cos\delta=\sin^2\delta$$，其中 $$\delta=\varphi_y-\varphi_x$$。
+
+- 线偏振光（平面偏振光）：$$\delta=m\pi$$, $$\vert E_yA_x\vert=\vert A_yE_x\vert$$。
+- 圆偏振光：$$\delta=(2m+1)\pi/2$$, $$A_x=A_y$$。光波的光矢量大小恒定，方向以 $$\omega$$ 匀速旋转。左旋：$$\delta=\pi/2$$；右旋：$$\delta=-\pi/2$$。
+
+### 菲涅尔公式
+
+接[电动力学](https://shi200005.github.io/2022/04/10/Electrodynamics/#反射定律和折射定律)。在光学波段，材料一般 $$\mu_1=\mu_2=\mu_0$$，此时折射定律叫**菲涅尔公式**。
+$$
+\text{s 偏振}:
+\begin{cases}
+\displaystyle \frac{E_{0\perp}'}{E_{0\perp}}=\frac{\sin(\theta''-\theta)}{\sin(\theta''+\theta)}\\
+\displaystyle \frac{E_{0\perp}''}{E_{0\perp}}=\frac{2\cos\theta\sin\theta''}{\sin(\theta''+\theta)}\\
+\end{cases}  \\
+\text{p 偏振}:
+\begin{cases}
+\displaystyle \frac{E_{0\parallel}'}{E_{0\parallel}}=\frac{\tan(\theta-\theta'')}{\tan(\theta+\theta'')}\\
+\displaystyle \frac{E_{0\parallel}''}{E_{0\parallel}}=\frac{2\cos\theta\sin\theta''}{\sin(\theta''+\sin\theta)\cos(\theta-\theta'')}\\
+\end{cases}
+$$
 
 
+令人惊讶的是，当 $$\theta+\theta''=90°$$ 的时候，p 偏振的反射波电场强度解为 0，消失。这个 $$\theta$$ 就是**布儒斯特角**。
+
+设介质1 ($$n_0$$) -> 2 ($$n$$) 的反射比为 $$r$$，透射比为 $$t$$，介质 2 -> 1 的反射比为 $$r'$$，透射比为 $$t'$$，得到 $$\displaystyle r=\frac{n_0-n}{n_0+n}$$, $$\displaystyle t=\frac{2n}{n_0+n}$$... 以及**斯托克斯公式** $$r=-r'$$, $$r^2+tt'=1$$。
+
+在高中时，我们说光又光密介质（如玻璃）入射到光疏介质（如空气），当入射角大于临界角时，折射波消失，发生**全反射**。应用：光纤。
+
+但是，虽然折射波没了几何意义，我们这里仍然在**复数域**考虑入射角大于临界角时的 $$\sin\theta''>1$$ 的解  ->  折射波为沿 $$x$$ 方向传播、振幅沿 $$z$$ 轴衰减的时谐波，沿分界面存在平均能流密度分量，沿面法线方向的平均能流密度为零。
+
+入射光是圆偏振光，反射光和折射光一般是圆偏振光；入射光是线偏振光，反射光和折射光一般是线偏振光，但光矢量相对于入射面的方位要改变；全反射时，线偏振光入射，反射光一般是椭圆偏振光。
+
+### 晶体光学与双折射
+
+在各向异性介质中，光的传播规律及相关性质与光的振动方向（偏振态）和传播方向有关。
+
+
+$$
+\begin{bmatrix} 
+  D_1 \\ D_2 \\ D_3 
+\end{bmatrix}
+=
+\begin{bmatrix} \epsilon_{11} & \epsilon_{12} & \epsilon_{13} \\
+\epsilon_{21} & \epsilon_{22} & \epsilon_{23} \\
+\epsilon_{31} & \epsilon_{32} & \epsilon_{33} 
+\end{bmatrix}
+\begin{bmatrix} 
+  E_1 \\ E_2 \\ E_3
+\end{bmatrix}
+$$
+**双折射**：一束自然光经过各向异性晶体折射时产生两束振动方向不同的线偏振光。一束遵循折射定律，称为**寻常光**（o 光），一束不遵从折射定律，折射光线一般不在入射面内，称为**非常光**（e 光）。o 光和 e 光只有在双折射晶体内才有意义。
+
+**晶体的光轴**：当光在晶体中沿这个**方向**传播时 o 光和 e 光的传播**速度**相同，不发生双折射。
+
+**主截面**：在晶体中，对于所选定的晶面（晶体天然形成的解理面），其法线和任一光轴所决定的平面称。
+
+**主平面**：晶体中某条光线与晶体光轴构成的平面。o 光光矢量的振动方向综合自己的主平面垂直，e 光光矢量的振动方向则在自己的主平面内。若光线的入射面与主截面重合，o 光和 e 光的主平面都与入射面重合，两光的振动方向互相垂直。
+
+o 光和 e 光的相对光强：马吕斯定律。e 光子波的波面（称为 e 波面）为旋转椭球面。正晶体 $$v_o>v_e$$，负晶体 $$v_o<v_e$$。
+
+**二向色性**：某些晶体内 o 光与 e 光的吸收程度有很大的不同。应用：偏振片，如偏振太阳镜。
+
+光的偏振态转换：波片、补偿器。
+
+一些产生方式：应力双折射、电光效应。
+
+**旋光现象**：线偏振光在某些物质中传播时，其振动面发生旋转的现象。互为镜像的分子能使线偏振光的振动面沿不同方向旋转，同种晶体存在左旋和右旋两种旋光异构体。**旋光色散**：同一旋光物质，对不同波长的光振动面所旋转的角度不同。一些产生方式：法拉第磁致旋光效应。菲涅尔简单唯象解释了旋光现象。
+
+## 光的干涉
+
+$$\tilde E_1=A_1e^{i\theta_1}$$, $$\tilde E_2=A_2e^{i\theta_2}$$, $$\tilde E=\tilde E_1+\tilde E_2$$, $$I=\tilde E\cdot\tilde E^*=A_1^2+A_2^2+2A_1A_2\cos(\theta_2-\theta_1)=I_1+I_2+2\sqrt{I_1I_2}\cos(\delta)$$。对特定场点，相干光满足 $$\delta$$ 为定值，可由对分相干光源发出的光分光得到。当 $$\delta=2m\pi$$ 时为干涉极大，当 $$\delta=(2m+1)\pi$$ 时为干涉极小。
+
+### 分波前法
+
+杨氏双缝实验 $$\displaystyle\delta=\frac{2\pi}{\lambda}(d_2-d_1)$$, $$\displaystyle I=4I_1\cos^2(\frac{\pi d}{\lambda D}x)$$，应用：全息术；
+
+### 分振幅法
+
+薄膜干涉：等倾干涉、等厚干涉（楔形薄膜、牛顿环）；
+
+例：多重透射光叠加后的合成振幅 $$\displaystyle\tilde E_T=\frac{tt'}{1-r'^2e^{i\delta}}A=\frac{1-r^2}{1-r^2e^{i\delta}}A$$。
+
+<img src="/images/blog/Optics_Stocks.png" alt="Optics_Stocks" style="zoom:30%;" />
+
+<p>from 于老师 光的干涉 154</p>
+
+- 应用：增透膜和增反膜（空气 $$n_0$$、介质 $$n$$、基底 $$n_g$$）
+
+  单层增反膜： $$n>n_g$$, $$nh=(2m+1)\lambda/4$$（单向镜面反光镜）；单层增透膜： $$n<n_g$$, $$nh=(2m+1)\lambda/4$$。
+
+### 分振动面法
+
+偏振光的干涉：将一束线偏振光分解为两束光。
+
+偏振片 I：将自然光变成线偏振光。晶片 C：分振动面，产生固定相位差。偏振片 II：使参与干涉的两个光矢量振动方向相同。当晶片厚度不均匀时产生等厚干涉条纹。
+
+应用：显色偏振。
+
+## 光的衍射
+
+光波在传播过程中遇到障碍物时波前的复振幅分布发生了改变。
+
+惠更斯 - 菲涅尔原理：在光源发出的波前 $$\Sigma$$ 上，每个面元 $$d\sigma$$ 都可以看成是新的振动中心，它们发出球面子波，空间某点 $$P(r)$$ 的光振动是所有这些子波在该点的振动的相干叠加。
+
+<img src="/images/blog/Optics_Diffraction.png" alt="Optics_Diffraction" style="zoom:60%;" />
+
+<p>from 于老师 光的衍射 27</p>
+
+$$\displaystyle\tilde E(P)=C\iint_\Sigma\tilde E(Q)\frac{e^{ikr}}{r}F(\theta)d\sigma$$ 无穷多振幅为无穷小，相邻两束光波的相位差亦为无穷小的连续分布的相干光波的叠加。
+
+### 屏函数
+
+衍射屏上建立平面直角坐标系 $$(x_0,y_0)$$，把紧贴其前的入射场 $$\tilde E_i(x_0,y_0)$$ 转化成紧贴其后的衍射场 $$\tilde E(x_0,y_0)$$， $$\displaystyle\tilde t(x_0,y_0)=\frac{\tilde E(x_0,y_0)}{\tilde E_i(x_0,y_0)}$$。
+
+- 例：薄透镜傍轴条件理想成像 $$\tilde E_i(x,y)=A$$, $$\tilde E(x,y)=Ae^{-ik(x^2+y^2)/2f'}$$，于是 $$\tilde t(x,y)=e^{-ik(x^2+y^2)/2f'}$$。
+
+- 例：正弦光栅 $$t(x_0)=t_0+t_1\cos(2\pi fx_0)$$，通过将两束相干平行光的干涉条纹记录于底片获得。
+
+### 菲涅尔 - 基尔霍夫积分公式
+
+$$\displaystyle\tilde E(x,y)=\frac{1}{i\lambda}\iint_\Sigma\tilde E(x_0,y_0)\frac{e^{ikr}}{r}\frac{1}{2}(1+\cos(\theta))dx_0dy_0$$ 标量波理论。**pending 我也不知道具体咋写的**
+
+傍轴近似，分母中的振幅 $$r\approx z$$，相位中的 $$kr$$ 按 $$z$$ 小量展开，$$\displaystyle r\approx z[1+\frac{(x-x_0^2)+(y-y_0)^2}{2z}-\frac{[(x-x_0^2)+(y-y_0)^2]^2}{8z^4}+\ldots]$$倾斜因子 $$\cos(\theta)\approx 1$$。
+
+#### 菲涅尔衍射
+
+当光源和接收屏（或二者之一）距离衍射屏为有限远，取 $$\displaystyle r\approx z[1+\frac{(x-x_0^2)+(y-y_0)^2}{2z}]$$，得到 $$\displaystyle\tilde E(x,y)=\frac{e^{ikz}}{i\lambda z}\iint_\Sigma\tilde E(x_0,y_0)e^{ik[(x-x_0)^2+(y-y_0^2)]/2z}dx_0dy_0$$。
+
+#### 夫琅和费衍射
+
+平面波衍射，即光源和接收屏距离衍射屏均为无限远，$$\displaystyle r\approx z[1+\frac{(x-x_0^2)+(y-y_0)^2}{2z}]=z+\frac{x^2+y^2}{2z}-\frac{xx_0+yy_0}{z}+\frac{x_0^2+y_0^2}{2z}$$。如果满足 $$\displaystyle\frac{k(x_0^2+y_0^2)_\text{max}}{2}\ll z$$，则取 $$\displaystyle r\approx z+\frac{x^2+y^2}{2z}-\frac{xx_0+yy_0}{z}$$，于是 $$\displaystyle\tilde E(x,y)=\frac{e^{ikz}}{i\lambda z}e^{ik(x^2+y^2)/2z}\iint_\Sigma\tilde E(x_0,y_0)e^{ik(xx_0+yy_0)/z}dx_0dy_0$$。
+
+带入积分公式，夫琅和费衍射能实现屏函数的[傅立叶变换](https://shi200005.github.io/2022/02/15/Complex-Functions/#傅里叶积分)：$$\displaystyle\tilde E(f_x,f_y)=Ce^{ik(x^2+y^2)/2z}\iint_{-\infty}^{+\infty}\tilde t(x_0,y_0)e^{-i2\pi(f_xx_0+f_yy_0)}dx_0dy_0$$，其中$$\displaystyle f_x=\frac{x}{z\lambda}$$, $$\displaystyle f_y=\frac{y}{z\lambda}$$，即 $$\tilde E(f_x,f_y)=\mathscr F\{\tilde t(x_0,y_0\}$$。应用：X 射线衍射发现准晶和 DNA 的双螺旋结构。
+
+- 例：平面波入射 -> 正弦光栅 -> 三列叠加的平面波透射。当光栅的周期和照明光波的波长可比较时，须用严格矢量理论求解，得到隐失波。
+- 例：平面波入射 -> 单缝 -> 高中学的衍射图样，其实就是屏函数——[矩形函数 sinc 的傅立叶变换](https://shi200005.github.io/2022/02/15/Complex-Functions/#傅里叶积分)。$$\displaystyle I=I_0(\frac{\sin\alpha}{\alpha})^2$$，其中 $$\alpha=\pi a\sin\theta/\lambda$$。
+- 例：平面波入射 -> 圆孔（半径为 $$R$$） -> 艾里斑。极坐标下求解，得到 $$\displaystyle I=I_0[\frac{2J_1(\varphi)}{\varphi}]^2$$，其中 $$\displaystyle\varphi=\frac{2\pi}{\lambda}R\sin\theta$$，$$\theta$$ 是衍射角，$$J_1$$ 是[贝塞尔函数](https://shi200005.github.io/2022/02/16/Partial-Differential-Equations/#贝塞尔函数)。第一极小的衍射角为 $$\sin\theta=0.61\lambda/R$$。成像仪器的每个物点的像实际上都是一个夫琅禾费衍射图样。如果两个**非相干**的物点很接近，衍射图样重叠，光强非相干直接相加。**瑞利判据**：当一个衍射图样的中央极大正好与另一个衍射图样的第一极小重合，就认为这两个物点刚好能被分辨，即 $$\theta_0=0.61\lambda/R$$。
+- 例：夫琅和费多缝衍射，有 $$N$$ 条缝，缝宽为 $$a$$，缝间距为 $$b$$。$$\displaystyle I=I_0(\frac{\sin\alpha}{\alpha})^2[\frac{\sin(N\beta)}{\sin\beta}]^2$$，其中 $$\alpha=\pi a\sin\theta/\lambda$$,  $$\beta=\pi b\sin\theta/\lambda$$。
+
+## 光的吸收、散射
+
+### 光的吸收
+
+朗伯定律：$$I=I_0e^{-\alpha(\lambda)L}$$，其中 $$\displaystyle\alpha(\lambda)=-\frac{dI}{I}\frac{1}{dx}$$ 为吸收系数。
+
+如果吸收系数不仅与波长有关，还与光强有关，则为非线性吸收。应用：变色镜片的光致变色（如卤化银）、摩擦透明的可擦笔。
+
+比尔定律：光通过透明溶液时溶液的吸收系数与溶液的质量分数成正比。
+
+### 光的散射
+
+光波在透明介质中传播时，部分光波偏离原来的传播方向向四面八方传播的现象。
+
+- 散射光的波长不发生变化
+
+  - 瑞利散射：瑞利散射定律：散射光强与 $$\lambda^4$$ 成反比。
+
+    - $$\displaystyle a<0.3\frac{\lambda}{2\pi}$$ 小颗粒散射，如空气中的尘埃、烟雾、小水滴，如一缕青烟；
+
+    - 分子散射（介质的某种性质出现涨落），如蔚蓝的天空、红橙色的日出和日落。
+
+  - 米氏散射
+    - $$a\approx\lambda$$ 大颗粒，丁达尔效应，e.g., 晨雾中的耶稣光、航空器的尾迹云、北京雾霾；
+
+- 散射光的波长发生变化
+
+  拉曼散射、布里渊散射、康普顿散射。
 
 
 
