--- a/_posts/2023-11-02-Language.md
+++ b/_posts/2023-11-02-Language.md
@@ -66,11 +66,27 @@ mathjax: true
 
   a Latin phrase that translates literally to "on site" or "in position.
 
+- D- and L-configurations
+
+  D: dextro, means right; L: leevo, means left
+
+  In chemistry, the **Fischer projection**, devised by Emil Fischer in 1891, is a two-dimensional representation of a three-dimensional organic molecule by projection. Fischer projections were originally proposed for the depiction of carbohydrates and used by chemists, particularly in organic chemistry and biochemistry. [source](https://en.wikipedia.org/wiki/Fischer_projection#:~:text=In%20chemistry%2C%20the%20Fischer%20projection,in%20organic%20chemistry%20and%20biochemistry.)
+
+  - D-Glucose, L-Alanine.
+
 ## From Greek
 
 ### Physics
 
-- entropy
+- entropy from ἑντροπία
+
+  > In 1865, German physicist Rudolf Clausius, one of the leading founders of the field of thermodynamics, defined it as the quotient of an infinitesimal amount of heat to the instantaneous temperature. He initially described it as *transformation-content*, in German *Verwandlungsinhalt*, and later coined the term *entropy* from a Greek word for **transformation**. -- [Wikipedia](https://en.wikipedia.org/wiki/Entropy#)
+
+  > Often called *Shannon entropy*, it was originally devised by Claude Shannon in 1948 to study the size of information of a transmitted message. -- [Wikipedia](https://en.wikipedia.org/wiki/Entropy#)
+
+- photon from φῶς
+
+  light.
 
 ## From German
 
@@ -90,7 +106,7 @@ mathjax: true
   
 - $$\Z$$ for integers, Zählen
 
-  to count.
+  to count. 
 
 ### Physics
 
@@ -98,11 +114,21 @@ mathjax: true
 
   the sum over states.
 
-- Bremsstrahlung
+- Bremsstrahlung [source](https://en.wikipedia.org/wiki/Bremsstrahlung)
+
+  In particle physics, *bremsstrahlung* (from German *bremsen* 'to brake' and *Strahlung* 'radiation') is electromagnetic radiation produced by the deceleration of a charged particle when deflected by another charged particle, typically an electron by an atomic nucleus. 
+
+  If quantum effects are negligible, an accelerating charged particle radiates power as described by the Larmor formula and its relativistic generalization.
+
+- *s-like*, senkrecht
+
+  s and p polarization. The component of the electric filed parallel to the plane of incidence is termed *s-like*, from senkrecht, German for perpendicular.
 
 ## From French
 
 ### Physics
 
 - propre
+
+  > The time $$τ$$ your watch registers (or, more generally, the time associated with the moving object) is called **proper time**. (The word suggests a mistranslation of the French *“propre,”* meaning “own.”) In some cases, $$τ$$ may be a more relevant or useful quantity than $$t$$. For one thing, proper time is invariant, whereas “ordinary” time depends on the particular reference frame you have in mind. -- Griffiths' Electrodynamics, 12.2.1 Proper Time and Proper Velocity
 
