--- a/_posts/2021-09-30-Calculus.md
+++ b/_posts/2021-09-30-Calculus.md
@@ -121,9 +121,23 @@ mathjax: true
 
 这一节研究多维空间中函数微分和积分的性质，与之相关的概念：topology, compactness（通俗易懂的[讲解视频](https://www.bilibili.com/video/BV17u4y1Q72G/?spm_id_from=333.999.0.0&vd_source=b42b482aaa6d2b27140f562ee1671ff3)）, manifold, boundaries, interior. 见 All 4-5 章即可。意义：紧致集上的连续函数是有界的（物理学家喜欢）。
 
-**Scalar-Valued**: $$f(x_1,...,x_n):\mathbb R^n\to\mathbb R$$
+### 矢量微分算符
 
-判断多元函数是否有极限。连续可微、可微、连续、偏导存在的关系。$$\displaystyle df(x,y)=\frac{\partial f}{\partial x}dx + \frac{\partial f}{\partial y}dy$$。[如何理解偏微分和全微分？ - Chinese Cabbage的回答 - 知乎](https://www.zhihu.com/question/272499712/answer/441638297)。
+在直角坐标系下 $$\nabla=\displaystyle\sum_i\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$。在右手广义坐标系下怎么写？这取决于我们希望场论中的梯度、散度、旋度不随坐标系的变换而改变数值。参见下文多元函数积分引用的[高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0)  。
+
+[Nabla 算符 ∇ 的运算律以及常用公式 - 東雲正樹的文章 - 知乎](https://zhuanlan.zhihu.com/p/52834609)。**拉普拉斯算子** $$\nabla\cdot(\nabla\varphi)=(\nabla\cdot\nabla)\varphi=\nabla^2\varphi$$，在调和函数（如电势场）中常用。 这个链接的封面图就是高斯定理微分形式有关的一个很常用的数学公式 $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$，这是数学的关系，见下面高斯定理，但是可以结合[电磁学 - 库仑定律](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E5%9B%BA%E5%AE%9A%E7%82%B9%E7%94%B5%E8%8D%B7%E5%BA%93%E4%BB%91%E5%AE%9A%E5%BE%8B)记忆——空间原点孤立点电荷形成的电势场。
+
+补充：拉普拉斯算子也可以对矢量场作用，例如在笛卡尔坐标系，$$\nabla^2\vec v=(\nabla^2 v_x)\vec e_x+(\nabla^2 v_y)\vec e_y+(\nabla^2 v_z)\vec e_z$$。在[电动力学 - 电磁波的传播](https://shi200005.github.io/2022/04/10/Electrodynamics/#%E7%94%B5%E7%A3%81%E6%B3%A2%E7%9A%84%E4%BC%A0%E6%92%AD)中使用。
+
+在场论中，常常需要区分**场点** $$\vec x$$ 和**源点** $$\vec x'$$ 。定义算符对场点微分 $$\nabla=\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$，对源点微分 $$\nabla'=\vec e_i\displaystyle\frac{\partial}{\partial x_i'}$$，具体关于**相对位矢** $$\vec r=\vec x-\vec x'$$ 的运算律见电动力学课件。  
+
+### Scalar-Valued
+
+$$f(x_1,...,x_n):\mathbb R^n\to\mathbb R$$
+
+#### 微分学
+
+判断多元函数是否有极限。连续可微、可微、连续、偏导存在的关系。$$\displaystyle df(x,y)=\frac{\partial f}{\partial x}dx + \frac{\partial f}{\partial y}dy$$。[如何理解偏微分和全微分？ - Chinese Cabbage的回答 - 知乎](https://www.zhihu.com/question/272499712/answer/441638297)。也可以参照下面 vector-valued 部分雅可比表示的微分形式。
 
 驻点 -> 极值点 -> Hessian Matrix 的正定/负定/...性质 -> [线性代数](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E4%BA%8C%E6%AC%A1%E5%9E%8B)
 
@@ -139,13 +153,9 @@ mathjax: true
 
   将一个有 $$n$$ 个变量与 $$k$$ 个约束条件的最优化问题转换为一个解有 $$n+k$$ 个变量的方程组的解的问题。任务：求 $$f(\vec{x})$$ 的极值，约束条件为 $$g_1(\vec{x})=...=g_M(\vec{x})=0$$。数学等价：$$\nabla_{x_1,...,x_n,\lambda_1,...,\lambda_M}\mathscr{L}(x_1,...,x_n,...\lambda_1,...,\lambda_M)=0$$$$\Leftrightarrow$$$$\begin{cases} \nabla f(\vec{x})-\displaystyle\sum_{k=1}^M\lambda_k\nabla g_k(\vec x)=0 \\ g_1(\vec x)=...=g_M(\vec x)=0\end{cases}$$.
 
-**Vector-Valued**: $$\vec f(x_1,...,x_n)=\begin{pmatrix}\vec f_1(x_1,...,x_n) \\ \vdots\\ \vec f_m(x_1,...,x_n)\end{pmatrix}$$记为 $$\vec f(\vec x)$$，$$\vec f:\mathbb R^n\to\mathbb R^m$$，物理中称为**矢量场**。
+#### 积分学
 
-一元函数可微 - 线性增长率 - 切线斜率。多元 VVF 推广 - **雅可比矩阵**，见 All 3.3，$$\vec y\approx\vec f(\vec a)+\mathbf D\vec f(\vec a)\cdot(\vec x-\vec a)$$。引理：vector-valued functions 求导链式法则，见 All Theorem 3.3.3。引理给出推论：反函数的雅可比。再推论：隐函数定理（这个目前没遇到过）。
-
-### 多重积分
-
-#### 积分换元 - 雅可比矩阵
+##### 积分换元 - 雅可比矩阵
 
 [微积分 - 雅可比矩阵及其几何意义](https://shi200005.github.io/download_file/Calculus_Jacobian.pdf)：一元函数积分换元时，有一个“系数”（$$\displaystyle \int_a^be^{-2y}dy$$→$$\displaystyle \int_{\frac{a}{2}}^{\frac{b}{2}}e^{-x}\frac{1}{2}dx$$）。到了多元函数积分学，这个系数就是[**雅可比矩阵**的**行列式**](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)。Intuition: 前面已经给出了雅可比矩阵的意义：描述多元函数微分性质。那么对于 n 重积分换元，相当于有一个 $$\vec f:\mathbb R^n\to\mathbb R^n$$，从旧坐标映射到新坐标。结合[行列式的意义](https://shi200005.github.io/2021/09/30/Linear-Algebra/#%E8%A1%8C%E5%88%97%E5%BC%8F)，作为“系数”的雅可比行列式就是新旧坐标体积变化倍数。
 
@@ -168,25 +178,40 @@ reference:
 
 对于以上多元函数知识点的简单例子：[微积分 - 多元函数](https://shi200005.github.io/download_file/Calculus_Multi.pdf)。
 
-#### 曲线、曲面积分
+##### 曲线、曲面积分
 
 曲线积分：在一元函数中，我们只是对 $$f(x)$$ 在 $$x$$ 的某取值范围内积分。现在我们对 $$f(x_1,...,x_n)$$ 可以在 $$\mathbb R^n$$ 内一条曲线 $$s$$ 积分，为 $$\displaystyle\int_C fds$$，计算方法是找到*一个*参数把 $$s$$ 参数化，然后就变成了一元积分。
 
 曲面积分：在二重积分里面我们对二维空间的一个区域积分，现在可以在*三维*空间里定义一个二维曲面 $$S$$ 上对某函数积分，为 $$\displaystyle\int_S fdS$$，方法是积分换元成两个参数，然后就变成了二重积分，勿忘雅可比。更多 intuition 见 All 5.1.4节。
 
+### Vector-Valued 
+
+$$\vec f(x_1,...,x_n)=\begin{pmatrix}\vec f_1(x_1,...,x_n) \\ \vdots\\ \vec f_m(x_1,...,x_n)\end{pmatrix}$$记为 $$\vec f(\vec x)$$，$$\vec f:\mathbb R^n\to\mathbb R^m$$，物理中称为**矢量场**。
+
+#### 微分学
+
+一元函数可微 - 线性增长率 - 切线斜率。多元 VVF 推广 - **雅可比矩阵**，见 All 3.3，$$\vec y\approx\vec f(\vec a)+\mathbf D\vec f(\vec a)\cdot(\vec x-\vec a)$$。引理：vector-valued functions 求导链式法则，见 All Theorem 3.3.3。引理给出推论：反函数的雅可比。再推论：隐函数定理（这个目前没遇到过）。
+
+用矢量微分算符表示，就是
+
+
+$$
+\mathbf D\vec f(\vec a)=
+
+\begin{bmatrix}
+\nabla f_1(\vec x)^T \\
+\nabla f_2(\vec x)^T \\
+\vdots \\
+\nabla f_n(\vec x)^T \\
+\end{bmatrix}
+$$
+
+
+
+
 ### 梯度、散度、旋度
 
 标量场的梯度 [Gradient - Wiki](https://en.wikipedia.org/wiki/Gradient)、矢量场的散度 [Divergence - Wiki](https://en.wikipedia.org/wiki/Divergence)（高斯定理）、矢量场的旋度 [Curl - Wiki](https://en.wikipedia.org/wiki/Curl_(mathematics))（斯托克斯定理）
-
-**矢量微分算符**
-
-在直角坐标系下 $$\nabla=\displaystyle\sum_i\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$。在右手广义坐标系下怎么写？这取决于我们希望场论中的梯度、散度、旋度不随坐标系的变换而改变数值。参见下文多元函数积分引用的[高等数学_场论初步_柱坐标、球坐标下梯度、散度、旋度](https://www.bilibili.com/video/BV137411t7oY?spm_id_from=333.999.0.0)  。
-
-[Nabla 算符 ∇ 的运算律以及常用公式 - 東雲正樹的文章 - 知乎](https://zhuanlan.zhihu.com/p/52834609)。**拉普拉斯算子** $$\nabla\cdot(\nabla\varphi)=(\nabla\cdot\nabla)\varphi=\nabla^2\varphi$$，在调和函数（如电势场）中常用。 这个链接的封面图就是高斯定理微分形式有关的一个很常用的数学公式 $$\nabla^2\displaystyle\frac{1}{r}=-4\pi\delta(\vec r)$$，这是数学的关系，见下面高斯定理，但是可以结合[电磁学 - 库仑定律](https://shi200005.github.io/2022/03/29/Electromagnetism/#%E5%9B%BA%E5%AE%9A%E7%82%B9%E7%94%B5%E8%8D%B7%E5%BA%93%E4%BB%91%E5%AE%9A%E5%BE%8B)记忆——空间原点孤立点电荷形成的电势场。
-
-补充：拉普拉斯算子也可以对矢量场作用，例如在笛卡尔坐标系，$$\nabla^2\vec v=(\nabla^2 v_x)\vec e_x+(\nabla^2 v_y)\vec e_y+(\nabla^2 v_z)\vec e_z$$。在[电动力学 - 电磁波的传播](https://shi200005.github.io/2022/04/10/Electrodynamics/#%E7%94%B5%E7%A3%81%E6%B3%A2%E7%9A%84%E4%BC%A0%E6%92%AD)中使用。
-
-在场论中，常常需要区分**场点** $$\vec x$$ 和**源点** $$\vec x'$$ 。定义算符对场点微分 $$\nabla=\vec e_i\displaystyle\frac{\partial}{\partial x_i}$$，对源点微分 $$\nabla'=\vec e_i\displaystyle\frac{\partial}{\partial x_i'}$$，具体关于**相对位矢** $$\vec r=\vec x-\vec x'$$ 的运算律见电动力学课件。  
 
 #### 高斯公式、格林公式、斯托克斯公式
 
