--- a/_posts/2023-11-02-Language.md
+++ b/_posts/2023-11-02-Language.md
@@ -27,7 +27,7 @@ mathjax: true
 
 - i.e. [source](https://dictionary.cambridge.org/dictionary/english/ie)
 
-  abbreviation for "**id est**", a Latin phrase for "that is", used especially in writing before a piece of information that makes the meaning of something clearer or shows its true meaning.
+  Abbreviation for "**id est**", a Latin phrase for "that is", used especially in writing before a piece of information that makes the meaning of something clearer or shows its true meaning.
 
   - The hotel is closed during low season, i.e. from October to March.
 
@@ -35,7 +35,7 @@ mathjax: true
 
 - e.g. [source](https://dictionary.cambridge.org/dictionary/english/eg?q=e.g.)
 
-  abbreviation for "**exempli gratia**": a Latin phrase that means "for example".
+  Abbreviation for "**exempli gratia**": a Latin phrase that means "for example".
 
   - You should eat more food that contains a lot of fibre, e.g. fruit, vegetables, and bread.
 
@@ -56,15 +56,15 @@ mathjax: true
 
 - *in vivo* [source](https://www.healthline.com/health/in-vivo-vs-in-vitro)
 
-  a Latin for “within the living”. It refers to work that’s performed in a whole, living organism.
+  A Latin for “within the living”. It refers to work that’s performed in a whole, living organism.
 
 - *in vitro* [source](https://www.healthline.com/health/in-vivo-vs-in-vitro)
 
-  a Latin for "within the glass". When something is performed in vitro, it happens outside of a living organism.
+  A Latin for "within the glass". When something is performed in vitro, it happens outside of a living organism.
 
 - *in situ* [source](https://en.wikipedia.org/wiki/In_situ)
 
-  a Latin phrase that translates literally to "on site" or "in position.
+  A Latin phrase that translates literally to "on site" or "in position.
 
 - D- and L-configurations
 
@@ -86,7 +86,17 @@ mathjax: true
 
 - photon from φῶς
 
-  light.
+  Light.
+
+### Life Science
+
+- haploid from ἁπλούς
+
+  Single.
+
+- diploid from διπλούς
+
+  Double.
 
 ## From German
 
@@ -96,23 +106,23 @@ mathjax: true
 
 - Ansatz [source](https://en.wikipedia.org/wiki/Ansatz)
 
-  an educated guess or an additional assumption made to help solve a problem, and which may later be verified to be part of the solution by its results.
+  An educated guess or an additional assumption made to help solve a problem, and which may later be verified to be part of the solution by its results.
 
   Example: see No.4 method to [solve linear ODEs](https://shi200005.github.io/download_file/Calculus_ODE.pdf).
 
 - Statistik [source](https://en.wikipedia.org/wiki/Statistics)
 
-  description of a state, a country.
+  Description of a state, a country.
   
 - $$\Z$$ for integers, Zählen
 
-  to count. 
+  To count. 
 
 ### Physics
 
 - $$Z$$ for the partition function, Zustandssumme
 
-  the sum over states.
+  The sum over states.
 
 - Bremsstrahlung [source](https://en.wikipedia.org/wiki/Bremsstrahlung)
 
